Added new background Videos

--- a/client/html/frame/background.html
+++ b/client/html/frame/background.html
@@ -9,10 +9,15 @@
 	      var mp4Vid = document.getElementById('mp4Source');
 
 	      var videos = [
-					'resources/videos/kayak.mp4'
+					'resources/videos/kayak.mp4',
+					'resources/videos/krav.mp4',
+					'resources/videos/whitewaterraft.mp4',
+					'resources/videos/hunt.mp4',
+					'resources/videos/whitewaterzip.mp4'
 				]
 				var photos = [
-					'resources/kayak.png'				]
+					'resources/kayak.png'				
+				]
 
 				var index = Math.floor(Math.random() * videos.length);
 				var videoPath = videos[index];
