Added .mp4 bg files

--- a/client/html/frame/background.html
+++ b/client/html/frame/background.html
@@ -9,15 +9,16 @@
 	      var mp4Vid = document.getElementById('mp4Source');
 
 	      var videos = [
-					'resources/videos/kayak.mp4',
-					'resources/videos/krav.mp4',
-					'resources/videos/whitewaterraft.mp4',
-					'resources/videos/hunt.mp4',
-					'resources/videos/whitewaterzip.mp4'
-				]
+					'resources/videos/WhiteWaterRaft.mp4',
+					'resources/videos/BowHunting.mp4',
+					'resources/videos/WhiteWaterZip.mp4',
+					'resources/videos/LakeJohnson.mp4',
+					'resources/videos/Powwow.mp4',
+					'resources/videos/MudRun.mp4'
+				];
 				var photos = [
 					'resources/kayak.png'				
-				]
+				];
 
 				var index = Math.floor(Math.random() * videos.length);
 				var videoPath = videos[index];
